# Proyecto-Latam-Turismo-Sustentable

./: .gitignore  Datasets.md  README.md  coverage-bronze.xml  coverage-silver.xml  estructura.txt  pyproject.toml  terraform.md
.github/: ci_bronze_ingestion.yml
.github/workflows/: ci_bronze_ingestion.yml  ci_cd_bronze_ingestion.yml  ci_cd_gold.yml  ci_cd_silver.yml  ci_cd_terraform.yml  ci_silver.yml  ci_terraform.yml
api_turismo_sustentable/: .gitignore  Readme.md
api_turismo_sustentable/backend/: custom_query.py  data_loader.py  main.py  questions.py  requirements.txt
api_turismo_sustentable/frontend/: explorar.html  index.html
dags/: dag_datalake_core_monthly.py  dag_export_data_monthly.py  utils.py
docker/: .dockerignore  .env  Dockerfile  docker-compose.yml  docker.md  requirements.txt
docs/: EstructuraDelProyecto.txt  justificacion_tecnica.md
docs/athena/: athena.md  queries.md
docs/bronze_docs/: README.md  data_quality_error_hand.md
docs/general/: Datasets.md
docs/great_expectations_docs/: problemas_expectations.md  readme_expectations.md
docs/infra/: documentacion_terraform.md  infra_ec2_airflow.md  terraform.md
docs/silver_docs/: README.md
infra/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
pipelines/: config.py  utils.py
pipelines/gold/: README.md  (+5 more)
queries/: 01_turismo_vs_co2.sql  02_transporte_impacto_ambiental.sql  03_crecimiento_economico_vs_co2.sql  04_evolucion_emisiones_turismo.sql  05_paises_turismo_sostenible.sql  READEME.md
scripts/: build_lambda.sh
streamlit/: app.py  requirements.txt
(+70 files in other folders)
